--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -8,10 +8,9 @@ FROM mcr.microsoft.com/vscode/devcontainers/python:0-${VARIANT}
 ARG NODE_VERSION="none"
 RUN if [ "${NODE_VERSION}" != "none" ]; then su vscode -c "umask 0002 && . /usr/local/share/nvm/nvm.sh && nvm install ${NODE_VERSION} 2>&1"; fi
 
-RUN pip install ipykernel python-vlc pafy youtube-dl pygobject
-RUN pip install -U discord.py python-dotenv
-RUN apt-get update \
-&& apt-get install -y vlc
+RUN pip install -U python-dotenv
+RUN pip install -U discord.py
+RUN pip install PyNaCl
 # [Optional] If your pip requirements rarely change, uncomment this section to add them to the image.
 # COPY requirements.txt /tmp/pip-tmp/
 # RUN pip3 --disable-pip-version-check --no-cache-dir install -r /tmp/pip-tmp/requirements.txt \
