--- a/heroku.yml
+++ b/heroku.yml
@@ -1,3 +1,8 @@
 build:
     docker:
         web: Dockerfile
+        worker: .devcontainer/Dockerfile
+run:
+    worker:
+        command:
+            - python discord_bot.py
