--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -23,3 +23,4 @@ RUN apt update && apt install ffmpeg -y
 
 # [Optional] Uncomment this line to install global node packages.
 # RUN su vscode -c "source /usr/local/share/nvm/nvm.sh && npm install -g <your-package-here>" 2>&1
+CMD python discord_bot.py
